// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSectionHeader should call any custom onCLose that is provided by the user correctly when clicked 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="custom title"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should call any custom onOpen that is provided by the user correctly when clicked 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="custom title"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should render a default toggle section header 1`] = `
<div>
  <h2
    aria-expanded="false"
    class="section-header is-interactable"
    tabindex="0"
  >
    <button
      aria-expanded="false"
      aria-label="default title"
      class="arrange-wrapper"
      tabindex="-1"
      type="button"
    >
      <span
        class="arrange title-arrange"
      >
        <span
          class="fit fit-block"
        >
          <span
            class="accordion-icon-wrapper"
          >
            <span
              class="accordion-icon"
            />
          </span>
        </span>
        <span
          class="fill fill-block"
        >
          <span
            aria-hidden="true"
            class="title"
          >
            default title
          </span>
        </span>
        <span
          class="fit"
        />
      </span>
    </button>
  </h2>
  <div
    aria-hidden="true"
    class="toggle"
  />
</div>
`;

exports[`ToggleSectionHeader should render an animated toggle section header 1`] = `
<div>
  <h2
    aria-expanded="false"
    class="section-header is-interactable"
    tabindex="0"
  >
    <button
      aria-expanded="false"
      aria-label="animated title"
      class="arrange-wrapper"
      tabindex="-1"
      type="button"
    >
      <span
        class="arrange title-arrange"
      >
        <span
          class="fit fit-block"
        >
          <span
            class="accordion-icon-wrapper"
          >
            <span
              class="accordion-icon"
            />
          </span>
        </span>
        <span
          class="fill fill-block"
        >
          <span
            aria-hidden="true"
            class="title"
          >
            animated title
          </span>
        </span>
        <span
          class="fit"
        />
      </span>
    </button>
  </h2>
  <div
    aria-hidden="true"
    class="toggle"
  >
    <div
      aria-hidden="true"
      class="rah-static rah-static--height-zero"
      style="height:0;overflow:hidden"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleSectionHeader should render an initially open toggle section header 1`] = `
<div>
  <h2
    aria-expanded="true"
    class="section-header is-interactable"
    tabindex="0"
  >
    <button
      aria-expanded="true"
      aria-label="initially open title"
      class="arrange-wrapper"
      tabindex="-1"
      type="button"
    >
      <span
        class="arrange title-arrange"
      >
        <span
          class="fit fit-block"
        >
          <span
            class="accordion-icon-wrapper"
          >
            <span
              class="accordion-icon is-open"
            />
          </span>
        </span>
        <span
          class="fill fill-block"
        >
          <span
            aria-hidden="true"
            class="title"
          >
            initially open title
          </span>
        </span>
        <span
          class="fit"
        />
      </span>
    </button>
  </h2>
  <div
    aria-hidden="false"
    class="toggle"
  >
    Test
  </div>
</div>
`;

exports[`ToggleSectionHeader should render an open toggle section header when clicked 1`] = `
<ToggleSectionHeader
  isAnimated={false}
  isInitiallyOpen={false}
  isTransparent={false}
  level={2}
  sectionHeaderAttrs={Object {}}
  title="opens on click title"
>
  <div>
    <SectionHeader
      aria-expanded={true}
      isOpen={true}
      isTransparent={false}
      level={2}
      onClick={[Function]}
      text="opens on click title"
    >
      <h2
        aria-expanded={true}
        className="section-header is-interactable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex="0"
      >
        <button
          aria-expanded={true}
          aria-label="opens on click title"
          className="arrange-wrapper"
          tabIndex="-1"
          type="button"
        >
          <Arrange
            className="title-arrange"
            fill={
              <span
                aria-hidden={true}
                className="title"
              >
                opens on click title
              </span>
            }
            fitStart={
              <span
                className="accordion-icon-wrapper"
              >
                <span
                  className="accordion-icon is-open"
                />
              </span>
            }
          >
            <span
              className="arrange title-arrange"
            >
              <span
                className="fit fit-block"
              >
                <span
                  className="accordion-icon-wrapper"
                >
                  <span
                    className="accordion-icon is-open"
                  />
                </span>
              </span>
              <span
                className="fill fill-block"
              >
                <span
                  aria-hidden={true}
                  className="title"
                >
                  opens on click title
                </span>
              </span>
              <span
                className="fit"
              />
            </span>
          </Arrange>
        </button>
      </h2>
    </SectionHeader>
    <Toggle
      isAnimated={false}
      isOpen={true}
    >
      <div
        aria-hidden={false}
        className="toggle"
      >
        opens on click section header
      </div>
    </Toggle>
  </div>
</ToggleSectionHeader>
`;

exports[`ToggleSectionHeader should set sectionHeaderAttrs prop correctly 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    backgroundColor="red"
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="sectionHeaderAttrs props test"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should set the children prop correctly 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="sectionHeaderAttrs props test"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    test child
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should set the level prop correctly 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={1}
    onClick={[Function]}
    text="sectionHeaderAttrs props test"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;
